# Singularity

./: .gitignore  CMakeLists.txt  README.md  compileShader.sh  main.cpp  vcpkg.json
shaders/: blue-moon-river.spv  cold.spv  frag.spv  laser-dance.spv  self-reflect.spv  singularity.spv  test.spv  twinkling-tunnel.spv  vert.spv
shaders/uncompiled/: blue-moon-river.frag  cold.frag  laser-dance.frag  self-reflect.frag  singularity.frag  test.frag  twinkling-tunnel.frag  vert.vert
